# swagger/swagger.json
@@ -1,5 +1,5 @@
 {
-  "swagger": "2.0",
+  "openapi": "3.0.0",
   "info": {
     "version": "1.0.0",
     "title": "Scrape API",
@@ -12,50 +12,49 @@
     "/scrape": {
       "get": {
         "summary": "Get scraped data",
-        "parameters": [
-          {
-            "name": "websiteURL",
-            "in": "query",
-            "required": true,
-            "type": "string",
-            "description": "URL of the website to scrape"
-          },
-          {
-            "name": "specificSelector",
-            "in": "query",
-            "required": true,
-            "type": "string",
-            "description": "Specific CSS selector to scrape"
-          },
-          {
-            "name": "titleSelector",
-            "in": "query",
-            "required": true,
-            "type": "string",
-            "description": "CSS selector for the title"
-          },
-          {
-            "name": "descriptionSelector",
-            "in": "query",
-            "required": true,
-            "type": "string",
-            "description": "CSS selector for the description"
-          },
-          {
-            "name": "imgSelector",
-            "in": "query",
-            "required": true,
-            "type": "string",
-            "description": "CSS selector for the image"
-          },
-          {
-            "name": "linkSelector",
-            "in": "query",
-            "required": true,
-            "type": "string",
-            "description": "CSS selector for the link"
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "websiteURL": {
+                    "type": "string",
+                    "description": "The URL of the website to scrape"
+                  },
+                  "specificSelector": {
+                    "type": "string",
+                    "description": "The specific CSS selector to target"
+                  },
+                  "titleSelector": {
+                    "type": "string",
+                    "description": "The CSS selector for the title"
+                  },
+                  "descriptionSelector": {
+                    "type": "string",
+                    "description": "The CSS selector for the description"
+                  },
+                  "imgSelector": {
+                    "type": "string",
+                    "description": "The CSS selector for the image"
+                  },
+                  "linkSelector": {
+                    "type": "string",
+                    "description": "The CSS selector for the link"
+                  }
+                },
+                "required": [
+                  "websiteURL",
+                  "specificSelector",
+                  "titleSelector",
+                  "imgSelector",
+                  "linkSelector"
+                ]
+              }
+            }
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "Scraped data",
@@ -105,6 +104,47 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/data": {
+      "get": {
+        "summary": "Get all scraped data from the database",
+        "responses": {
+          "200": {
+            "description": "All scraped data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "title": {
+                        "type": "string",
+                        "description": "The title of the scraped item"
+                      },
+                      "description": {
+                        "type": "string",
+                        "description": "The description of the scraped item"
+                      },
+                      "image": {
+                        "type": "string",
+                        "description": "The image URL of the scraped item"
+                      },
+                      "url": {
+                        "type": "string",
+                        "description": "The link URL of the scraped item"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal server error"
           }
         }
       }
